# TP-python

renduTP1/projet_final/: pyproject.toml
renduTP1/projet_final/output/: clean_data.csv
renduTP1/projet_final/src/: main.py
renduTP1/projet_final/src/utils/: io.py  paths.py
