[project]
name = "projet-final"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Antoine3181", email = "alquierantoine@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.3.3",
]

[project.scripts]
projet-final = "projet_final:main"

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"
